update code for locate-us, bankDetails and other services